<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/app_name">
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="preference_screen_always_on"
			android:summary="@string/summary_screen_always_on"
			android:title="@string/title_screen_always_on" />
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="preference_show_date"
			android:summary="@string/summary_show_date"
			android:title="@string/title_show_date"/>
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="preference_show_battery"
			android:summary="@string/summary_show_battery_information"
			android:title="@string/title_show_battery_information"/>
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="preference_show_name"
			android:summary="@string/summary_show_name"
			android:title="@string/title_show_name"/>
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="preference_locked"
			android:summary="@string/summary_locked"
			android:title="@string/title_locked"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:key="category_grid"
		android:title="@string/app_grid">
		<ListPreference
			android:defaultValue="3"
			android:entries="@array/grid_x"
			android:entryValues="@array/grid_x"
			android:key="preference_grid_x"
			android:summary="@string/summary_grid_x"
			android:title="@string/title_grid_x"/>
		<ListPreference
			android:defaultValue="2"
			android:entries="@array/grid_y"
			android:entryValues="@array/grid_y"
			android:key="preference_grid_y"
			android:summary="@string/summary_grid_y"
			android:title="@string/title_grid_y"/>
		<ListPreference
			android:defaultValue="5"
			android:entries="@array/margins"
			android:entryValues="@array/margins"
			android:key="preference_margin_x"
			android:summary="@string/summary_margin_x"
			android:title="@string/title_margin_x"/>
		<ListPreference
			android:defaultValue="5"
			android:entries="@array/margins"
			android:entryValues="@array/margins"
			android:key="preference_margin_y"
			android:summary="@string/summary_margin_y"
			android:title="@string/title_margin_y"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:key="category_transparency"
		android:title="@string/title_transparency">

		<CheckBoxPreference
				android:defaultValue="true"
				android:key="preference_default_transparency"
				android:summary="@string/summary_default_transparency"
				android:title="@string/title_default_transparency"/>
		<!-- Replace SliderPreference with SeekBarPreference -->
		<SeekBarPreference
			android:defaultValue="50"
			android:key="preference_transparency"
			android:max="100"
			android:title="@string/title_transparency"/>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/system">
		<Preference
			android:key="preference_background"
			android:summary="@string/summary_background"
			android:title="@string/title_background">
			<intent android:action="android.intent.action.SET_WALLPAPER"/>
		</Preference>
		<Preference
			android:key="preference_system"
			android:summary="@string/summary_system"
			android:title="@string/title_system">
			<intent android:action="android.settings.SETTINGS"/>
		</Preference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/about">
		<Preference
			android:key="preference_about"
			android:title="@string/app_name"/>
		<Preference
			android:key="preference_github"
			android:title="@string/title_github"/>
	</PreferenceCategory>
</PreferenceScreen>